--- a/public/css/main-modified.css
+++ b/public/css/main-modified.css
@@ -357,6 +357,9 @@ a.pure-button-primary {
   .pure-form button[type="submit"] {
     margin: 0.7em 0 0;
   }
+  #main_page_text {
+    padding-right: 100px!important;
+}
   .pure-form input:not([type]),
   .pure-form input[type="color"],
   .pure-form input[type="date"],
